crates/svelte-parser/tests/snapshots/snapshots__use_directive_deep_member_access.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
<div use:actions.tooltip.show={config}>Content</div>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 52,
                    },
                    name: "div",
                    attributes: [
                        Directive(
                            Directive {
                                span: Span {
                                    start: 5,
                                    end: 38,
                                },
                                kind: Use,
                                name: "actions.tooltip.show",
                                modifiers: [],
                                expression: Some(
                                    ExpressionValue {
                                        span: Span {
                                            start: 5,
                                            end: 38,
                                        },
                                        expression_span: Span {
                                            start: 31,
                                            end: 37,
                                        },
                                        expression: "config",
                                        is_quoted: false,
                                    },
                                ),
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                    ],
                    children: [
                        Text(
                            Text {
                                span: Span {
                                    start: 39,
                                    end: 46,
                                },
                                data: "Content",
                                is_whitespace: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 52,
        },
    },
    span: Span {
        start: 0,
        end: 52,
    },
}
